--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,7 +1,7 @@
-/*========== FONTS ==========*/
-@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Fredoka:wght@400;500;600&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap');
+/* ========== FONTS ========== */
+/* @import url('https://fonts.googleapis.com/css2?family=Bungee&family=Fredoka:wght@400;500;600&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap'); */
 
-/*========== CSS VARIABLES ==========*/
+/*========== CSS VARIABLES ========== */
 :root {
   --header-height: 3rem;
 
@@ -19,7 +19,7 @@
   --container-color: #fff;
 
   /*===== FONTS & SIZES =====*/
-  --body-font: 'Fredoka', sans-serif;
+  /* --body-font: 'Fredoka', sans-serif; */
   --large-font-size: 2rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
@@ -33,3 +33,132 @@
   --font-semi-bold: 600;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-container {
+  width: 100%;
+  background-color: var(--first-color);
+}
+
+.nav {
+  display: grid;
+  grid-template-columns: 0.2fr auto 1fr;
+  align-items: center;
+  height: 80px;
+  width: 90%;
+  max-width: 1720px;
+  margin:  0 auto;
+}
+
+#nav-logo {
+  color: #fff;
+  justify-self: start;
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(6, auto);
+  list-style: none;
+  text-align: center;
+  width: 70%;
+  justify-self: end;
+}
+
+.nav-links {
+  color: #fff;
+  text-decoration: none;
+}
+
+.nav-links:hover {
+  color: blueviolet;
+  transition: all 0.2s ease-out;
+}
+
+.menu-toggle .bar {
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  transition: all 0.3s ease-in-out;
+  background: #fff;
+}
+
+@media screen and (max-width: 786px) {
+  .nav-container {
+    position: relative;
+  }
+
+  .nav-menu {
+    display: grid;
+    grid-template-columns: auto;
+    background: red;
+    margin: 0;
+    width: 100%;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 0;
+    transition: all 0.5s ease;
+  }
+
+  #nav-logo {
+    margin-left: 20px;
+  }
+
+  .nav-menu.active {
+    background: grey;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .nav-links {
+    text-align: center;
+    line-height: 60px;
+    width: 100%;
+    display: table;
+  }
+
+  .nav-links:hover {
+    background-color: aqua;
+    color: #fff;
+    transition: all 0.4s ease-out;
+  }
+
+  .nav {
+    width: 100%;
+  }
+
+  #mobile-menu {
+    position: absolute;
+    top: 20%;
+    right: 5%;
+    transform: translate(0%, 40%);
+  }
+
+  #mobile-menu.is-active .bar:nth-child(1) {
+  transform:  translateY(8px) rotate(45deg);
+}
+
+  #mobile-menu.is-active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+    #mobile-menu.is-active .bar:nth-child(3) {
+  transform:  translateY(-8px) rotate(-45deg);
+  }
+
+  .menu-toggle .bar {
+    display: block;
+    cursor: pointer;
+  }
+
+  .menu-toggle:hover {
+    cursor: pointer;
+  }
+}
