--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -31,6 +31,8 @@
   /*===== FONTS WEIGHTS =====*/
   --font-medium: 500;
   --font-semi-bold: 600;
+
+  --home-image: "./app/docs/port.jpg"
 }
 
 * {
@@ -41,7 +43,7 @@
 
 .nav-container {
   width: 100%;
-  background-color: var(--first-color);
+  background-color: black;
 }
 
 .nav {
@@ -162,3 +164,90 @@
     cursor: pointer;
   }
 }
+
+.hero {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  padding-top: 5%;
+  background-position: center;
+  background-size: cover;
+}
+
+.hero-text {
+  background-color: rgba(0, 0, 0, 0.567);
+}
+
+.hero-text h1 {
+  font-size: 3em;
+  color:  #fff;
+}
+.hero-text p {
+  font-size: 2em;
+  color:  #fff;
+}
+
+
+.blob {
+  justify-self: center;
+  background-position: center;
+  background-size: cover;
+  height: 20em;
+  width: 20em;
+  border-radius: 80% 69% 75% 90% / 68% 77% 80% 69%;
+  transition: all 1s ease-in-out ;
+  animation: morph 20s ease-in-out infinite both alternate;
+}
+
+@media screen and (min-width: 786px) {
+
+.hero {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  align-items: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  background-color: antiquewhite;
+}
+
+.hero-text {
+  justify-self: center;
+}
+
+.hero-text h1 {
+  font-size: 3em;
+}
+.hero-text p {
+  font-size: 2em;
+}
+
+.blob {
+  justify-self: center;
+  background-position: center;
+  background-size: cover;
+  height: 400px;
+  width: 400px;
+  border-radius: 80% 69% 75% 90% / 68% 77% 80% 69%;
+  transition: all 1s ease-in-out ;
+  animation: morph 20s ease-in-out infinite both alternate;
+}
+
+}
+
+
+
+
+@keyframes morph{
+      0%,
+  100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
+   14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
+   28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
+   42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
+   56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
+   70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
+   84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
+
+
+}
+
+
