--- a/app/css/about.css
+++ b/app/css/about.css
@@ -1,160 +1,267 @@
-.about {
-  display: grid;
-  grid-template-columns: 1;
-  padding-top: 5%;
-  padding-bottom: 5%;
-}
 
-.about h1 {
-  justify-self: center;
-}
-
-.about-info {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.about-info div {
-  display: flex;
-  width: fit-content;
-  height: auto;
-  align-items: center;
-}
-
-.about-info p {
-  font-size: 1.5em;
-  padding-left: 5%;
-  padding-right: 5%;
-}
-
-.about-img {
-    width: 400px;
-    height: 310px;
-    padding-left: 2%;
-}
-
-.animated-border {
-  width: fit-content;
-    position:relative;
-    justify-self: center;
-}
-
-img{
-  width:100%;
-  object-fit: cover;
-}
-
-.animated-border::after {
-  animation: after 7s infinite;
-  content: "";
-  display: block;
-  position: absolute;
-}
-
-.animated-border::before {
-  animation: before 6s infinite;
-  content: "";
-  display: block;
-  position: absolute;
-}
-
-@keyframes after {
-  0% {
-    height: 0%;
-    width: 0%;
-    border: none;
+@media screen and (min-width: 820px) {
+  .about {
+    display: grid;
+    grid-template-columns: 1;
+    padding-top: 5%;
+    padding-bottom: 5%;
   }
-  40% {
-    height: 0%;
-    width: 0%;
-    left: 95%;
-    top: 95%;
-    border-bottom: 3px solid white;
-  }
-  60% {
-    top: 95%;
-    height: 0%;
-    width: 90%;
-    left: 5%;
-    border-bottom: 3px solid white;
-  }
-  80% {
-    top: 5%;
-    height: 90%;
-    width: 0%;
-    left: 5%;
-    border-bottom: 3px solid white;
-    border-left: 3px solid white;
-  }
-  100% {
-    top: 5%;
-    height: 0%;
-    width: 0%;
-    left: 5%;
-    border-bottom: 3px solid white;
-    border-left: 3px solid white;
-  }
-}
-
-@keyframes before {
-  0% {
-    border-top: 3px solid black;
-    border-right: 3px solid black;
-    width: 0%;
-    height: 0%;
-    left: 5%;
-    top: 5%;
-  }
-  20% {
-    border-top: 3px solid black;
-    width: 90%;
-    height: 0px;
-    left: 5%;
-    top: 5%;
-  }
-  40% {
-    border-top: 3px solid black;
-    border-right: 3px solid black;
-    width: 0%;
-    height: 90%;
-    left: 95%;
-    top: 5%;
-  }
-  60% {
-    border-top: 3px solid black;
-    border-right: 3px solid black;
-    width: 0%;
-    height: 0%;
-    left: 95%;
-    top: 95%;
-  }
-  80% {
-  }
-  100% {
-  }
-}
-
-.eight{
-  width: 35rem;
-  justify-self: center;
-  padding-bottom: 2%;
-}
-
-.eight h1 {
-  text-align:center;
- 
-  text-transform:uppercase;
-  font-size:26px; letter-spacing:1px;
   
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: 16px 0;
-  grid-gap: 22px;
+  .about h1 {
+    justify-self: center;
+    color: #1a1a1a;
+  }
+  
+  .about-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  
+  .about-info div {
+    display: flex;
+    width: fit-content;
+    height: auto;
+    align-items: center;
+  }
+  
+  .about-info p {
+    font-size: 1.5em;
+    padding-left: 5%;
+    padding-right: 5%;
+    color: #1a1a1a
+  }
+  
+  .about-img {
+      width: 400px;
+      height: 310px;
+      padding-left: 2%;
+  }
+  
+  .animated-border {
+    width: fit-content;
+      position:relative;
+      justify-self: center;
+  }
+  
+  .animated-border-img{
+    width:100%;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+  
+  .animated-border::after {
+    animation: after 7s infinite;
+    content: "";
+    display: block;
+    position: absolute;
+  }
+  
+  .animated-border::before {
+    animation: before 6s infinite;
+    content: "";
+    display: block;
+    position: absolute;
+  }
+  
+  
+  .eight{
+    width: 35rem;
+    justify-self: center;
+    padding-bottom: 2%;
+  }
+  
+  .eight h1 {
+    text-align:center;
+   
+    text-transform:uppercase;
+    font-size:26px; letter-spacing:1px;
+    
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: 16px 0;
+    grid-gap: 22px;
+  }
+  
+  .eight h1:after,.eight h1:before {
+    content: " ";
+    display: block;
+    border-bottom: 3px solid;
+  }
+
 }
 
-.eight h1:after,.eight h1:before {
-  content: " ";
-  display: block;
-  border-bottom: 3px solid;
+@media screen and (max-width: 820px) {
+
+.about {
+    display: grid;
+    grid-template-rows: 1;
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+  
+  .about h1 {
+    justify-self: center;
+    color: #1a1a1a;
+  }
+  
+  .about-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+  
+  .about-info div {
+    display: flex;
+    width: fit-content;
+    height: auto;
+    align-items: center;
+  }
+  
+  .about-info p {
+    text-align: center;
+    font-size: 1.5em;
+    padding-left: 5%;
+    padding-right: 5%;
+    color: #1a1a1a;
+  }
+  
+  .about-img {
+      width: 400px;
+      height: 310px;
+      padding-left: 10%;
+      padding-right: 10%;
+      padding-bottom: 10%;
+
+  }
+  
+  .animated-border {
+    width: fit-content;
+      position:relative;
+      justify-self: center;
+  }
+  
+  .animated-border-img{
+    width:100%;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+  
+  .animated-border::after {
+    animation: after 7s infinite;
+    content: "";
+    display: block;
+    position: absolute;
+  }
+  
+  .animated-border::before {
+    animation: before 6s infinite;
+    content: "";
+    display: block;
+    position: absolute;
+  }
+  
+  
+  .eight{
+    width: 35rem;
+    justify-self: center;
+    padding-bottom: 2%;
+  }
+  
+  .eight h1 {
+    text-align:center;
+   
+    text-transform:uppercase;
+    font-size:26px; letter-spacing:1px;
+    
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: 16px 0;
+    grid-gap: 22px;
+  }
+  
+  .eight h1:after,.eight h1:before {
+    content: " ";
+    display: block;
+    border-bottom: 3px solid;
+  }
+
 }
+
+
+  @keyframes after {
+    0% {
+      height: 0%;
+      width: 0%;
+      border: none;
+    }
+    40% {
+      height: 0%;
+      width: 0%;
+      left: 95%;
+      top: 95%;
+      border-bottom: 3px solid white;
+    }
+    60% {
+      top: 95%;
+      height: 0%;
+      width: 90%;
+      left: 5%;
+      border-bottom: 3px solid white;
+    }
+    80% {
+      top: 5%;
+      height: 90%;
+      width: 0%;
+      left: 5%;
+      border-bottom: 3px solid white;
+      border-left: 3px solid white;
+    }
+    100% {
+      top: 5%;
+      height: 0%;
+      width: 0%;
+      left: 5%;
+      border-bottom: 3px solid white;
+      border-left: 3px solid white;
+    }
+  }
+  
+  @keyframes before {
+    0% {
+      border-top: 3px solid black;
+      border-right: 3px solid black;
+      width: 0%;
+      height: 0%;
+      left: 5%;
+      top: 5%;
+    }
+    20% {
+      border-top: 3px solid black;
+      width: 90%;
+      height: 0px;
+      left: 5%;
+      top: 5%;
+    }
+    40% {
+      border-top: 3px solid black;
+      border-right: 3px solid black;
+      width: 0%;
+      height: 90%;
+      left: 95%;
+      top: 5%;
+    }
+    60% {
+      border-top: 3px solid black;
+      border-right: 3px solid black;
+      width: 0%;
+      height: 0%;
+      left: 95%;
+      top: 95%;
+    }
+    80% {
+    }
+    100% {
+    }
+  }
