--- a/app/css/skills.css
+++ b/app/css/skills.css
@@ -14,11 +14,11 @@
 	 margin: 0 0 0.5em;
 	 font-weight: normal;
 }
- input {
+ /* input {
 	 position: absolute;
 	 opacity: 0;
 	 z-index: -1;
-}
+} */
 
 /* Accordion styles */
  .tabs {
