--- a/app/css/projects.css
+++ b/app/css/projects.css
@@ -265,14 +265,14 @@ img {
     padding-right: 20%;
   } */
 
-  #portfolio{
+  #projects{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
 
-  #portfolio h1 {
+  #projects h1 {
     color: #fff;
   }
 
@@ -299,17 +299,17 @@ img {
     text-align: center;
     }
 
-  #portfolio{
+  #projects{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-    #portfolio{
+    #projects{
     background-color: #1a1a1a;
   }
 
-  #portfolio h1 {
+  #projects h1 {
     color: #fff;
   }
 
@@ -342,7 +342,7 @@ img {
 
 @media screen and (min-width: 768px) {
 
-  #portfolio{
+  #projects{
     background-color: #1a1a1a;
   }
 
@@ -384,14 +384,14 @@ img {
     color: #fff;
   }
 
-  #portfolio{
+  #projects{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
 
-  #portfolio h1 {
+  #projects h1 {
     color: #fff;
   }
 
@@ -427,14 +427,14 @@ img {
     padding-right: 20%;
   }
 
-  #portfolio{
+  #projects{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
 
-  #portfolio h1 {
+  #projects h1 {
     color: #fff;
   }
 
